2009-07-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify the Livermore loop sources, optimize some.

	Previously *all* the arrays possibly used by all kernels were
	defined when compiling *each* kernel. Due to the relatively large
	array size selected to support large problem sizes at run-time,
	the resulting offsets in object code and executables would
	overflow linker abilities for weak linkers or on 32-bit systems.
	
	The code was refactored so that for each kernel the demonstration
	programs only include the array definitions actually required.

	Besides the `bench' and `test' programs a new `simple' program is
	provided for the benefit of testing code generation in the muTC
	core compiler.

	As a side change, some kernels were made more efficient through
	additional C99 `restrict' annotations on array pointers, which
	promise nice aliasing properties to the optimizing compilers.

	After this patch, some tests still fail due to either too large
	problem sizes (or too low default TIMEOUT) or offset errors.
	
	* programs/benchmarks/livemore/main_simple.sl: New. This does not
	take parameters, and uses the predefined defaults.

	* programs/benchmarks/livermore/ll.slh: Move array definitions to...
	
	* programs/benchmarks/livermore/arrays.h: here. Get rid of
	preprocessor aliases (`m4_define'), since the objects are now in
	the global namespace and the aliases would fool up SL macro
	expansions for special names (e.g. `ix', `ex').
	
	* programs/benchmarks/livermore/gencode.sh: Move glue code generation into...
	* programs/benchmarks/livermore/Makefile.am: here. Extract array
	definitions from `arrays.h' using a LL_USE annotation to be added in each
	kernel, listing the *names* of the required objects from `arrays.h'.

	* programs/benchmarks/livermore/bench13.bin.mtalpha.psize,
	* programs/benchmarks/livermore/bench14.bin.mtalpha.psize: New.
	
	* programs/benchmarks/livermore/gencode.sh: Rename to...